--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -33,15 +33,18 @@ a {
 .nav-bar-div {
   align-items: center;
   background-color: black;
-  border: solid thin white;
+  border: solid thin rgba(255, 255, 255, 0.5);
   box-shadow: 0.3px 0.3px 1px 1px black;
-  display: none;
+  display: flex;
   flex-direction: column;
   font-size: large;
   left: -0.1em;
+  margin: 0 -100%;
+  opacity: 0;
   position: absolute;
   text-align: center;
   top: 100%;
+  transition: 0.2s;
 }
 
 .nav-bar:hover span {
@@ -49,18 +52,32 @@ a {
 }
 
 .nav-bar:hover .nav-bar-div {
-  display: flex;
+  margin: 0;
+  opacity: 1;
 }
 
 .nav-bar a {
   background-color: black;
-  border-bottom: solid thin white;
+  border-bottom: solid thin rgba(255, 255, 255, 0.5);
   display: block;
   font-size: 1.1em;
   letter-spacing: 0.1em;
-  margin: 0 1em;
+  margin: -100% 1em;
   padding: 0.4em 0.3em;
+  transition: all 0.2s, margin 0.3s;
   width: 90%;
+}
+
+.nav-bar:hover a {
+  margin: 0 1em;
+}
+
+.nav-bar a:hover {
+  background-color: whitesmoke;
+  box-shadow: 0 0 3px 1px black;
+  color: black;
+  text-shadow: 0 0 1px black;
+  transform: scale(1.05);
 }
 
 a:visited {
@@ -69,4 +86,8 @@ a:visited {
 
 .head-name {
   margin: 0 1em;
+}
+
+.nav-bar-div .actived {
+  text-shadow: 0 0 1px black, 0.5px 0.5px 15px white, -0.5px -0.5px 15px white;
 }
