--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,6 +8,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 5;
 }
 
 a {
@@ -39,7 +40,7 @@ a {
   flex-direction: column;
   font-size: large;
   left: -0.1em;
-  margin: 0 -100%;
+  margin: -10% -100%;
   opacity: 0;
   position: absolute;
   text-align: center;
@@ -62,7 +63,7 @@ a {
   display: block;
   font-size: 1.1em;
   letter-spacing: 0.1em;
-  margin: -100% 1em;
+  margin: -35% -1.5em;
   padding: 0.4em 0.3em;
   transition: all 0.2s, margin 0.3s;
   width: 90%;
