--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: whitesmoke;
+  background-color: lightslategray;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -12,7 +12,9 @@ body #root {
 
 main {
   grid-row: 2;
-  max-height: 105vh;
+  max-height: 95vh;
+  padding: 15px 25px;
+  width: max-content;
 }
 
 .home {
@@ -82,7 +84,6 @@ main {
 
 .aside-board {
   display: none;
-  position: relative;
 }
 
 .board-fixer {
@@ -96,22 +97,28 @@ main {
   z-index: -1;
 }
 
-.aside-board div {
+.board-content div {
   cursor: pointer;
-  padding: 5px 0;
+  padding: 0 0 8px 5px;
 }
 
 .pin-icon {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(0, 0, 0);
   margin: 0 10px 0 0;
-  opacity: 0;
   transform: rotate(-25deg);
   width: 15px;
 }
 
-.aside-board div:hover .pin-icon, .aside-board div:hover {
+.board-content div:hover .pin-icon {
+  color: rgb(85, 25, 7);
+}
+
+.board-content div:hover {
   font-weight: 600;
-  opacity: 1;
+}
+
+.window-box {
+  display: none;
 }
 
 .about-text {
@@ -130,8 +137,9 @@ main {
 @media (min-width: 700px) {
   .home {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(5, 20%);
     grid-template-rows: 5em 1fr 1fr;
+    min-width: 95%;
   }
 
   .home h1 {
@@ -140,24 +148,48 @@ main {
   }
 
   .home-div {
-    grid-column: 1;
+    grid-column: 1/3;
     grid-row: 2;
-    margin-right: 2em;
+    margin-left: 2em;
+  }
+
+  .sociallinks-div {
+    top: 50%;
   }
 
   .aside-board {
-    background-color: seashell;
+    background-color: peru;
     border: double 10px black;
     border-radius: 5%;
     box-shadow: 1px 0.5px 3px black;
     display: flex;
-    flex-direction: column;
     font-size: calc(1em + 1.5vmin);
-    grid-column: 2;
+    grid-column: 3/5;
     grid-row: 2/3;
-    height: calc(7em + 1vh);
-    margin: -1em 0 0 calc(2.5em + 2vw);
+    height: calc(7em + 3vh);
+    margin: -1em calc(3em + 3vw);
+    width: calc(7em + 3vh);
+  }
+
+  .board-content {
+    background-color: burlywood;
+    border-radius: 1%;
+    display: flex;
+    flex-direction: column;
     padding: 1.5em 0 1.5em 1em;
-    width: calc(7em + 1vw);
+    position: relative;
+    width: 100%;
+  }
+
+  .window-box {
+    grid-column: 5;
+    grid-row: 1/3;
+    margin: 10% 20% 0 0;
+  }
+}
+
+@media (min-width: 1060px) {
+  .window-box {
+    display: flex;
   }
 }
