--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,17 @@ main {
   top: 12%;
 }
 
+.computer-background {
+  background-color: whitesmoke;
+  border-radius: 15%;
+  height: 75%;
+  left: 2.5%;
+  position: absolute;
+  top: 0;
+  width: 95%;
+  z-index: -1;
+}
+
 .sociallinks-div {
   display: flex;
   position: absolute;
@@ -74,6 +85,21 @@ main {
 .social-icons {
   margin: 1em;
   width: 35px;
+}
+
+.keyboard-div {
+  display: flex;
+  position: relative;
+}
+
+.keyboard-background {
+  background-color: grey;
+  border-radius: 5%;
+  height: 80%;
+  margin: 0 15%;
+  position: absolute;
+  top: 10%;
+  width: 70%;
 }
 
 .keyboard-icon {
@@ -137,8 +163,8 @@ main {
 @media (min-width: 700px) {
   .home {
     display: grid;
-    grid-template-columns: repeat(5, 20%);
-    grid-template-rows: 5em 1fr 1fr;
+    grid-template-columns: repeat(2, 45%);
+    grid-template-rows: 5em 1fr;
     min-width: 95%;
   }
 
@@ -148,13 +174,13 @@ main {
   }
 
   .home-div {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 2;
     margin-left: 2em;
   }
 
   .sociallinks-div {
-    top: 50%;
+    top: 45%;
   }
 
   .aside-board {
@@ -164,10 +190,10 @@ main {
     box-shadow: 1px 0.5px 3px black;
     display: flex;
     font-size: calc(1em + 1.5vmin);
-    grid-column: 3/5;
+    grid-column: 2;
     grid-row: 2/3;
     height: calc(7em + 3vh);
-    margin: -1em calc(3em + 3vw);
+    margin: -1em 0 0 calc(3em + 3vw);
     width: calc(7em + 3vh);
   }
 
@@ -180,16 +206,30 @@ main {
     position: relative;
     width: 100%;
   }
-
-  .window-box {
-    grid-column: 5;
-    grid-row: 1/3;
-    margin: 10% 20% 0 0;
-  }
 }
 
 @media (min-width: 1060px) {
+  .home {
+    grid-template-columns: repeat(5, 20%);
+    grid-template-rows: 5em 1fr;
+  }
+
+  .home-div {
+    grid-column: 1/3;
+  }
+
+  .sociallinks-div {
+    top: 53%;
+  }
+
+  .aside-board {
+    grid-column: 3;
+  }
+
   .window-box {
     display: flex;
+    grid-column: 5;
+    grid-row: 1/3;
+    margin: 10% 20% 0 0;
   }
 }
